kuvat githubista, button väritetty omanlaiseksi

--- a/galleria.html
+++ b/galleria.html
@@ -22,7 +22,7 @@
 
 
    <h3>Mun ensimmäiset villasukat!</h3>
-   <img src="https://www.dropbox.com/scl/fi/p0a8vwmvqex03idn1qiz7/ekat.JPG?rlkey=2n8nt22t9cj98feqaslp5eewz&raw=1" alt="Ensimmäiset sukat" width="90%">
+   <img src="Gallerialoppu/Eka.JPG" alt="Ensimmäiset sukat" width="90%">
    <p>Mun ensimmäiset koskaan neulomani villasukat. 
       Näistä en luovu vaikka onkin jo muutamaan otteeseen pitänyt paikata reikiä. 
       Näitä neuloessa huomasin ensimmäisen sukan neulottuani, ettei ole muuten enää tarpeeksi lankaa toiseen. 
@@ -30,70 +30,70 @@
    <a href="https://www.youtube.com/watch?v=QF6vlz6vRMw" target="_blank" rel="noopener noreferrer">Novitan video-ohje</a>
 
    <h3>Cox Socks</h3>
-   <img src="https://www.dropbox.com/scl/fi/7tj2cfigcu5sior5ihtq3/CoxSocks.JPG?rlkey=ue4nxbxe5wc03ot3cfb6z4bbr&raw=1" alt="Cox Socks" width="90%">
+   <img src="Gallerialoppu/sukka.jpg" alt="Cox Socks" width="90%">
    <p>Uskomattoman tyylikkäät ja herkät villasukat.
       Tein nämä hieman ohjetta ohuemmalla langalla, joten jouduin modifioimaan sukkia. 
       Älä ihmettele, jos omistasi tulee eri näköiset kun näistä.</p>
    <a href="https://www.ravelry.com/patterns/library/cox-sox" target="_blank" rel="noopener noreferrer">Cox Socksien ohje</a> <br>
 
    <h3>Eripari samapari raitasukat</h3>
-   <img src="https://www.dropbox.com/scl/fi/xdnnt47rdp1exdn41zy8z/erisama.JPG?rlkey=04l5ehcpez8ng52alsp7veh1d&raw=1" alt="eripari samapari sukat" width="90%">
+   <img src="Gallerialoppu/Raita.JPG" alt="eripari samapari sukat" width="90%">
    <p>Näihin ei ole ohjetta, freestyletin nämä ja en kirjoittanut ylös mitään. 
       On kuitenkin helpot sukat tehdä itse perässä. 
       Tekee päävärillä resorin ja kantapään ja sukan varressa ja jalassa vuorottelee värejä aina kahden silmukan jaksoissa.</p>
 
    <h3>Kaiku-sukat</h3>   
-   <img src="https://www.dropbox.com/scl/fi/dw5x3pfo2swzhnvuzl5vc/Kaiku.JPG?rlkey=bxyeha8vh4ieo7noihmqedq3u&raw=1" alt="Kaikusukat" width="90%">
+   <img src="Gallerialoppu/Kaiku.jpg" alt="Kaikusukat" width="90%">
    <p>Jämälangoista vääntämäni kaiku-sukat. 
       Rumat kuin synti. Sukkaperheen epäonnistunut esikoinen, joka riehuu Steissillä öisin ja on häpeäksi. 
       Jos teet nämä perässä niin tee itsellesi palvelus ja jätä toi varvassysteemi tekemättä.</p>
    <a href="https://www.lankava.fi/fi/ohje-neulotut-kaiku-sukat/" target="_blank" rel="noopener noreferrer">Kaiku-sukkien ohje</a>   
 
    <h3>Salmiakkiruutu sukat</h3>
-   <img src="https://www.dropbox.com/scl/fi/m7sk59ksxkezspvd9a9wy/salmiakki.JPG?rlkey=watrnqos2veknyboixsqpt78k&raw=1" alt="Salmiakkiruutu sukat" width="90%">
+   <img src="Gallerialoppu/Salmiakki.jpg" alt="Salmiakkiruutu sukat" width="90%">
    <p>Salmiakkiruutu kohoneuletta, hyvä perusmalli suosittelen. Kuvassa kohoneule erottuu huonommin, kuin luonnossa.</p>
    <a href="https://www.novitaknits.com/fi/kohoneule-villasukat-novita-7-veljesta#attributesetPatterndetails" target="_blank" rel="noopener noreferrer">Salmiakkiruutu sukkien ohje</a>
 
    <h3>Sukan näköiset sukat</h3>
-   <img src="https://www.dropbox.com/scl/fi/dyl9752p8h0bvfywcgy6g/IMG_8028.JPG?rlkey=jqp8udf7s1tpw0cnqii4o6pur&raw=1" alt="tommonen joku sukka" width="90%">
+   <img src="Gallerialoppu/juu.jpg" alt="tommonen joku sukka" width="90%">
    <p>Tommoset sukat joissa vuorottelin kaks riviä värikästä lankaa ja yhden rivin tummaa. 
    Värikkäillä riveillä sitten nostelin neulomatta jonkun ehkäpä viiden silmukan välein yhden tumman silmukan ja tollaset sukat siitä tuli.</p>
 
    <h3>Kukka&sukka</h3>
-   <img src="https://www.dropbox.com/scl/fi/ilzpaqckh4xqidgwoyitk/kukka.JPG?rlkey=i3pj4yj74vazba9fcrm3vaf2s&raw=1" alt="kukka&sukka" width="90%">
+   <img src="Gallerialoppu/kukka.jpg" alt="kukka&sukka" width="90%">
    <p>Perus nilkkasukat itsestäänraidoittuvasta langasta, johon lopuksi virkkasin ja kiinnitin kukkia. Ihan saatanan epäkäytännölliset, mutta on ainakin komeet.</p>
 
    <h3>Perus villasukat</h3>
-   <img src="https://www.dropbox.com/scl/fi/amfo9y39mxhtmpc3tebaq/neon.JPG?rlkey=9n4u6wpcsflyl1nbpqf35dpje&raw=1" alt="Perussukat" width="90%">
+   <img src="Gallerialoppu/Basic.jpg" alt="Perussukat" width="90%">
    <p>Villasukkien basic bitch. Ei mitään erikoista kikkailua, ainoastaan räikeä lanka.</p>
 
    <h3>Vaahtokarkkisukat</h3>
-   <img src="https://www.dropbox.com/scl/fi/8i3oalun4r7ili3w0teze/Palmikko.JPG?rlkey=fu7ed1z7o27mqpl9r5ctfcrpk&raw=1" alt="Palmikkosukat" width="90%">
+   <img src="Gallerialoppu/Vaahtokarkki.jpg" alt="Palmikkosukat" width="90%">
    <p>Maailman nopeimmat ja kivat sukat tehdä. Ihankun laittaisi jalat hattaraan ton megapaksun langan takia.</p>
    <a href="https://www.novitaknits.com/fi/villasukat-vaahtokarkki-novita-isoveli#attributesetPatterndetails" target="_blank" rel="noopener noreferrer">Ohje Vaahtokarkkisukkiin</a>
 
    <h3>Pupusukat</h3>
-   <img src="https://www.dropbox.com/scl/fi/yhkihy60odcw338wn1sxk/IMG_8027.JPG?rlkey=3ryeb11j7jn3wg13puf2121vd&raw=1" alt="Pupusukat" width="90%">
+   <img src="Gallerialoppu/Kani.JPG" alt="Pupusukat" width="90%">
    <p>Oletko joskus laittanut villasukat jalkaan ja miettinyt, että näissä on kyllä aivan liian vähän korvia? 
       En minäkään, mutta siinä ne nyt on!</p>
    <a href="https://www.novitaknits.com/fi/neulotut-pitkavartiset-villasukat-novita-7-veljesta#attributesetPatterndetails" target="_blank" rel="noopener noreferrer">Ohjeet itse sukkiin</a> <br>  
    <a href="https://www.meillakotona.fi/artikkelit/ovatko-nama-sopoimmat-sukat-ikina-neulo-pupusukat-itselle-tai-lapselle" target="_blank" rel="noopener noreferrer">Ohje kanin korviin</a>
 
    <h3>Socks fit for a queen</h3>
-   <img src="https://www.dropbox.com/scl/fi/ugmpnl5f76hb9g1nmor3r/dd99cade-92ab-4a1b-a1f1-03c4c7fd2929.jpg?rlkey=iwl8ieycy57a054hulmizba2f&raw=1" alt="Liilat sukat" width="80%">
+   <img src="Gallerialoppu/Tansu.jpg" alt="Liilat sukat" width="80%">
    <p>Ystävälle lahjaksi tehdyt sukat. Värit valitsin hänen luonteensa mukaan. Nirkkoreuna ja broken seed stitch kuvio.</p>
 
    <h3>Destiny: Hunter</h3>
-   <img src="https://www.dropbox.com/scl/fi/d7xk4ipqdoj2pxwnk0tp8/Hunter.JPG?rlkey=wqj8gnos4n9cz0jwohiohabqi&raw=1" alt="Hunter sukat" width="90%">
+   <img src="Gallerialoppu/Hunter.JPG" alt="Hunter sukat" width="90%">
    <p>Destiny pelisarjan fanille Hunter logolla sukat. Näihin tein vain perus miesten villasukat ja vartea varten googletin logon ruutupiirroksena.</p>
 
    <h3>Körtti sukat</h3>
-   <img src="https://www.dropbox.com/scl/fi/nzgv3048bo65sl85gs068/kortti.JPG?rlkey=72tcoofkm7y7rfhtmvlz9oyak&raw=1" alt="Körttisukat" width="90%">
+   <img src="Gallerialoppu/Körtti.JPG" alt="Körttisukat" width="90%">
    <p>Miesten körttisukat, tosi hauska, helppo ja rento malli neuloa.</p>
    <a href="https://www.lankava.fi/fi/ohje-neulotut-kortti-villasukat/" target="_blank" rel="noopener noreferrer">ohje Körtti-villasukilla</a>
 
    <h3>Muumipeikko</h3>
-   <img src="https://www.dropbox.com/scl/fi/m5f736cy9yitijrpkzrl8/muumi.JPG?rlkey=84v7d6z23sirnovk8ei8rcjnz&raw=1" alt="Muumisukat" width="90%">
+   <img src="Gallerialoppu/Muumi.JPG" alt="Muumisukat" width="90%">
    <p>Maailman söpöimmät ja raivostuttavimmat villasukat. 
       Nämä piti aloittaa alusta varmaan kolmesti. 
       Näistä oli ohjeessa myös tarjolla vain lasten ja naisten koko. 
@@ -108,30 +108,30 @@
    Jonkunlainen käärme, jonka olen vääntänyt pieni ikuisuus sitten. No toughts, just vibes.</p>   
 
    <h3>Jalaton lintu</h3>
-<img src="https://www.dropbox.com/scl/fi/6r992gfq634yhsv0iwo3n/IMG_8040.JPG?rlkey=m7r0w9jv7cfjfpp3w2yjlmxqn&raw=1" alt="Hienosto lintu, baskeri ja kaikki" width="90%">
+<img src="Gallerialoppu/Lintu.JPG" alt="Hienosto lintu, baskeri ja kaikki" width="90%">
 <p>Todennäköisesti Ranskalainen lintu, koska hänellä on baskeri. Fancy. <br> Ohjeet: Arne & Carlos - Neulotut linnut-kirja</p>
 
 <h3>Hirviö</h3>
-<img src="https://www.dropbox.com/scl/fi/t9l9o308knms553wbvqzu/IMG_8034.JPG?rlkey=j2lu76jaz6v3wpffph9qvar98&raw=1" alt="Hirviö" width="90%">
+<img src="Gallerialoppu/Hirvio.JPG" alt="Hirviö" width="90%">
 <p>Symppis hirviö, mitä kerran tein kaverin kanssa meidän mummoklubissa. 
    Ekologiset arvot ovat tälle hirviötyypille tärkeitä ja siksi hänet on tehty jämälangoista.</p>
 <a href="https://www.novitaknits.com/fi/lapsen-pikkuhirvio-lelu-novita-nalle-taika#attributesetPatterndetails" target="_blank" rel="noopener noreferrer">Ohje hirivöön</a>
 
 <h3>Totuudelle (ja kaikelle) sokea jänis</h3>
-<img src="https://www.dropbox.com/scl/fi/bjz7de3y37a9i2rxhmo6o/IMG_8037.JPG?rlkey=9ujs7nc52mfi1p7bk08qstesh&raw=1" alt="simätön jänis" width="90%">
+<img src="Gallerialoppu/Pupu.JPG" alt="simätön jänis" width="90%">
 <p>Silmätön pupu katselee haikeana taivaalle, koska ei voi koskaan nähdä tähtiä.</p>
 
 <h3>Pois muuttaneet käärmeet</h3>
-<img src="https://www.dropbox.com/scl/fi/mxwah5cqepf58o4cnw356/4ec0b50c-9d91-4da7-8f49-28ec68f998d5.jpg?rlkey=vlyxse8sfzl132ezw8hpbpjyn&raw=1" alt="Käärmeksi'" width="80%">
+<img src="Gallerialoppu/Kaarme.jpg" alt="Käärmeksi'" width="80%">
 <p>Kaverille lahjaksi tehdyt käärmeet. Ensin hän sai liilan kärmeen, mutta näki myöhemmin tekemäni pörhökäärmeen ja tilasi itselleen myös sellaisen.</p>
 
 <h3>Pois muuttaneet sokea jänis ja og pörhökäärme</h3>
-<img src="https://www.dropbox.com/scl/fi/onbymw3gyuaelndbsl4ec/c6e643ce-7a56-466b-a09c-d13989dddaae.jpg?rlkey=ws100yeedxr69uzy84nnhnwqy&raw=1" alt="Käärme ja pupu" width="80%">
+<img src="Gallerialoppu/Kaarmepupu.jpg" alt="Käärme ja pupu" width="80%">
 <p>Kaverille lahjaksi annetut alkuperäinen pörhökäärme ja minimaalinen sokea jänis. 
    Tämä on siis se käärmeiden valioyksilö, jonka pohjalta piti neuloa toinenkin.</p>
 
 <h3>Hullu Haamu</h3>
-<img src="https://www.dropbox.com/scl/fi/s4xjyhyxv0o3pccad2kio/IMG_8042.JPG?rlkey=ofqyvi86r72hlwvcy5k8qya48&raw=1" alt="Hullut päivät haamu" width="90%">
+<img src="Gallerialoppu/Haamu.JPG" alt="Hullut päivät haamu" width="90%">
 <p>Mitä mitä, tunnettu maskottihaamu jo kahdessa Haaga-Helian projektissa mukana??? Tietäjät tietää ja ovat nähneet haamun Ammatillisen viestinnän kurssilla, osana työnhaku videotani.</p>
 
  <h2 id="Seka">Sekalaiset</h2>
