--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
  </head> 
 <body> 
  <nav class ="navigation">  
-<img src="Gallerialoppu/LopullinenIsoLogo.png" alt="Paska logo" width="25%"> 
+<img src="Gallerialoppu/IsoLogo.png" alt="Paska logo" width="25%"> 
    
  <a style="color: #ede7d9;" href="galleria.html">Kuvagalleria</a>
  <a style="color: #ede7d9;" href="historia.html">Historia</a>
