--- a/galleria.html
+++ b/galleria.html
@@ -30,7 +30,7 @@
    <a href="https://www.youtube.com/watch?v=QF6vlz6vRMw" target="_blank" rel="noopener noreferrer">Novitan video-ohje</a>
 
    <h3>Cox Socks</h3>
-   <img src="Gallerialoppu/sukka.jpg" alt="Cox Socks" width="90%">
+   <img src="Gallerialoppu/sukka.JPG" alt="Cox Socks" width="90%">
    <p>Uskomattoman tyylikkäät ja herkät villasukat.
       Tein nämä hieman ohjetta ohuemmalla langalla, joten jouduin modifioimaan sukkia. 
       Älä ihmettele, jos omistasi tulee eri näköiset kun näistä.</p>
@@ -43,28 +43,28 @@
       Tekee päävärillä resorin ja kantapään ja sukan varressa ja jalassa vuorottelee värejä aina kahden silmukan jaksoissa.</p>
 
    <h3>Kaiku-sukat</h3>   
-   <img src="Gallerialoppu/Kaiku.jpg" alt="Kaikusukat" width="90%">
+   <img src="Gallerialoppu/Kaiku.JPG" alt="Kaikusukat" width="90%">
    <p>Jämälangoista vääntämäni kaiku-sukat. 
       Rumat kuin synti. Sukkaperheen epäonnistunut esikoinen, joka riehuu Steissillä öisin ja on häpeäksi. 
       Jos teet nämä perässä niin tee itsellesi palvelus ja jätä toi varvassysteemi tekemättä.</p>
    <a href="https://www.lankava.fi/fi/ohje-neulotut-kaiku-sukat/" target="_blank" rel="noopener noreferrer">Kaiku-sukkien ohje</a>   
 
    <h3>Salmiakkiruutu sukat</h3>
-   <img src="Gallerialoppu/Salmiakki.jpg" alt="Salmiakkiruutu sukat" width="90%">
+   <img src="Gallerialoppu/Salmiakki.JPG" alt="Salmiakkiruutu sukat" width="90%">
    <p>Salmiakkiruutu kohoneuletta, hyvä perusmalli suosittelen. Kuvassa kohoneule erottuu huonommin, kuin luonnossa.</p>
    <a href="https://www.novitaknits.com/fi/kohoneule-villasukat-novita-7-veljesta#attributesetPatterndetails" target="_blank" rel="noopener noreferrer">Salmiakkiruutu sukkien ohje</a>
 
    <h3>Sukan näköiset sukat</h3>
-   <img src="Gallerialoppu/juu.jpg" alt="tommonen joku sukka" width="90%">
+   <img src="Gallerialoppu/juu.JPG" alt="tommonen joku sukka" width="90%">
    <p>Tommoset sukat joissa vuorottelin kaks riviä värikästä lankaa ja yhden rivin tummaa. 
    Värikkäillä riveillä sitten nostelin neulomatta jonkun ehkäpä viiden silmukan välein yhden tumman silmukan ja tollaset sukat siitä tuli.</p>
 
    <h3>Kukka&sukka</h3>
-   <img src="Gallerialoppu/kukka.jpg" alt="kukka&sukka" width="90%">
+   <img src="Gallerialoppu/kukka.JPG" alt="kukka&sukka" width="90%">
    <p>Perus nilkkasukat itsestäänraidoittuvasta langasta, johon lopuksi virkkasin ja kiinnitin kukkia. Ihan saatanan epäkäytännölliset, mutta on ainakin komeet.</p>
 
    <h3>Perus villasukat</h3>
-   <img src="Gallerialoppu/Basic.jpg" alt="Perussukat" width="90%">
+   <img src="Gallerialoppu/Basic.JPG" alt="Perussukat" width="90%">
    <p>Villasukkien basic bitch. Ei mitään erikoista kikkailua, ainoastaan räikeä lanka.</p>
 
    <h3>Vaahtokarkkisukat</h3>
@@ -80,7 +80,7 @@
    <a href="https://www.meillakotona.fi/artikkelit/ovatko-nama-sopoimmat-sukat-ikina-neulo-pupusukat-itselle-tai-lapselle" target="_blank" rel="noopener noreferrer">Ohje kanin korviin</a>
 
    <h3>Socks fit for a queen</h3>
-   <img src="Gallerialoppu/Tansu.jpg" alt="Liilat sukat" width="80%">
+   <img src="Gallerialoppu/Tansu.JPG" alt="Liilat sukat" width="80%">
    <p>Ystävälle lahjaksi tehdyt sukat. Värit valitsin hänen luonteensa mukaan. Nirkkoreuna ja broken seed stitch kuvio.</p>
 
    <h3>Destiny: Hunter</h3>
@@ -103,7 +103,7 @@
  <h2 id="Lelut">Pehmolelut</h2>
 
    <h3>Järkyttävän surkea käärme? tai mato??</h3>
-<img src="https://www.dropbox.com/scl/fi/fb6h28sslal6oz2wmho5i/IMG_8039.JPG?rlkey=emma7xmt2n65ygow435g43it2&raw=1" alt="Käärme" width="90%">
+<img src="Gallerialoppu/Mato.JPG" alt="Käärme" width="90%">
 <p>Aloitetaan taas parhaimmasta. 
    Jonkunlainen käärme, jonka olen vääntänyt pieni ikuisuus sitten. No toughts, just vibes.</p>   
 
@@ -122,11 +122,11 @@
 <p>Silmätön pupu katselee haikeana taivaalle, koska ei voi koskaan nähdä tähtiä.</p>
 
 <h3>Pois muuttaneet käärmeet</h3>
-<img src="Gallerialoppu/Kaarme.jpg" alt="Käärmeksi'" width="80%">
+<img src="Gallerialoppu/Kaarme.JPG" alt="Käärmeksi'" width="80%">
 <p>Kaverille lahjaksi tehdyt käärmeet. Ensin hän sai liilan kärmeen, mutta näki myöhemmin tekemäni pörhökäärmeen ja tilasi itselleen myös sellaisen.</p>
 
 <h3>Pois muuttaneet sokea jänis ja og pörhökäärme</h3>
-<img src="Gallerialoppu/Kaarmepupu.jpg" alt="Käärme ja pupu" width="80%">
+<img src="Gallerialoppu/Kaarmepupu.JPG" alt="Käärme ja pupu" width="80%">
 <p>Kaverille lahjaksi annetut alkuperäinen pörhökäärme ja minimaalinen sokea jänis. 
    Tämä on siis se käärmeiden valioyksilö, jonka pohjalta piti neuloa toinenkin.</p>
 
