--- a/galleria.html
+++ b/galleria.html
@@ -55,12 +55,12 @@
    <a href="https://www.novitaknits.com/fi/kohoneule-villasukat-novita-7-veljesta#attributesetPatterndetails" target="_blank" rel="noopener noreferrer">Salmiakkiruutu sukkien ohje</a>
 
    <h3>Sukan näköiset sukat</h3>
-   <img src="Gallerialoppu/juu.JPG" alt="tommonen joku sukka" width="90%">
+   <img src="Gallerialoppu/Juu.JPG" alt="tommonen joku sukka" width="90%">
    <p>Tommoset sukat joissa vuorottelin kaks riviä värikästä lankaa ja yhden rivin tummaa. 
    Värikkäillä riveillä sitten nostelin neulomatta jonkun ehkäpä viiden silmukan välein yhden tumman silmukan ja tollaset sukat siitä tuli.</p>
 
    <h3>Kukka&sukka</h3>
-   <img src="Gallerialoppu/kukka.JPG" alt="kukka&sukka" width="90%">
+   <img src="Gallerialoppu/Kukka.JPG" alt="kukka&sukka" width="90%">
    <p>Perus nilkkasukat itsestäänraidoittuvasta langasta, johon lopuksi virkkasin ja kiinnitin kukkia. Ihan saatanan epäkäytännölliset, mutta on ainakin komeet.</p>
 
    <h3>Perus villasukat</h3>
