--- a/galleria.html
+++ b/galleria.html
@@ -30,7 +30,7 @@
    <a href="https://www.youtube.com/watch?v=QF6vlz6vRMw" target="_blank" rel="noopener noreferrer">Novitan video-ohje</a>
 
    <h3>Cox Socks</h3>
-   <img src="Gallerialoppu/sukka.JPG" alt="Cox Socks" width="90%">
+   <img src="Gallerialoppu/sukka.jpg" alt="Cox Socks" width="90%">
    <p>Uskomattoman tyylikkäät ja herkät villasukat.
       Tein nämä hieman ohjetta ohuemmalla langalla, joten jouduin modifioimaan sukkia. 
       Älä ihmettele, jos omistasi tulee eri näköiset kun näistä.</p>
@@ -68,7 +68,7 @@
    <p>Villasukkien basic bitch. Ei mitään erikoista kikkailua, ainoastaan räikeä lanka.</p>
 
    <h3>Vaahtokarkkisukat</h3>
-   <img src="Gallerialoppu/Vaahtokarkki.jpg" alt="Palmikkosukat" width="90%">
+   <img src="Gallerialoppu/Vaahtokarkki.JPG" alt="Palmikkosukat" width="90%">
    <p>Maailman nopeimmat ja kivat sukat tehdä. Ihankun laittaisi jalat hattaraan ton megapaksun langan takia.</p>
    <a href="https://www.novitaknits.com/fi/villasukat-vaahtokarkki-novita-isoveli#attributesetPatterndetails" target="_blank" rel="noopener noreferrer">Ohje Vaahtokarkkisukkiin</a>
 
@@ -80,7 +80,7 @@
    <a href="https://www.meillakotona.fi/artikkelit/ovatko-nama-sopoimmat-sukat-ikina-neulo-pupusukat-itselle-tai-lapselle" target="_blank" rel="noopener noreferrer">Ohje kanin korviin</a>
 
    <h3>Socks fit for a queen</h3>
-   <img src="Gallerialoppu/Tansu.JPG" alt="Liilat sukat" width="80%">
+   <img src="Gallerialoppu/Tansu.jpg" alt="Liilat sukat" width="80%">
    <p>Ystävälle lahjaksi tehdyt sukat. Värit valitsin hänen luonteensa mukaan. Nirkkoreuna ja broken seed stitch kuvio.</p>
 
    <h3>Destiny: Hunter</h3>
@@ -122,11 +122,11 @@
 <p>Silmätön pupu katselee haikeana taivaalle, koska ei voi koskaan nähdä tähtiä.</p>
 
 <h3>Pois muuttaneet käärmeet</h3>
-<img src="Gallerialoppu/Kaarme.JPG" alt="Käärmeksi'" width="80%">
+<img src="Gallerialoppu/Kaarme.jpg" alt="Muutama käärme" width="80%">
 <p>Kaverille lahjaksi tehdyt käärmeet. Ensin hän sai liilan kärmeen, mutta näki myöhemmin tekemäni pörhökäärmeen ja tilasi itselleen myös sellaisen.</p>
 
 <h3>Pois muuttaneet sokea jänis ja og pörhökäärme</h3>
-<img src="Gallerialoppu/Kaarmepupu.JPG" alt="Käärme ja pupu" width="80%">
+<img src="Gallerialoppu/Kaarmepupu.jpg" alt="Käärme ja pupu" width="80%">
 <p>Kaverille lahjaksi annetut alkuperäinen pörhökäärme ja minimaalinen sokea jänis. 
    Tämä on siis se käärmeiden valioyksilö, jonka pohjalta piti neuloa toinenkin.</p>
 
