indexin linkit kuntoon, paddingia muokattu

--- a/index.html
+++ b/index.html
@@ -6,15 +6,20 @@
   <link rel="stylesheet" href="style.css">
   <title>Meerin Villasukat</title> 
   <meta name="keywords" content="meerin villasukat, villasukat"> 
- </head> 
+  <style>
+    a:link {color: #ede7d9;}
+    a:hover {color: #93032e;}
+  </style>
+</head> 
+
 <body> 
  <nav class ="navigation">  
 <img src="Gallerialoppu/IsoLogo.png" alt="Paska logo" width="25%"> 
    
- <a style="color: #ede7d9;" href="galleria.html">Kuvagalleria</a>
- <a style="color: #ede7d9;" href="historia.html">Historia</a>
- <a style="color: #ede7d9;" href="ohjeet.html">Ohjeet</a>
- <a style="color: #ede7d9;" href="muuta kivaa.html">Muuta</a>
+ <a href="galleria.html">Kuvagalleria</a>
+ <a href="historia.html">Historia</a>
+ <a href="ohjeet.html">Ohjeet</a>
+ <a href="muuta kivaa.html">Muuta</a>
 </nav>
  <h1>Tervetuloa</h1> 
  <p>Tule nauttimaan tai vaihtoehtoisesti kärsimään mun villasukista, jos olet täällä vasten tahtoasi. <em>Sori siitä...</em></p> 
