--- a/muuta kivaa.html
+++ b/muuta kivaa.html
@@ -10,7 +10,7 @@
 <body> 
    <header>
       <img role="link" src="Gallerialoppu/Lopullinenpaska.png" alt="Logo" width="30px"><a href="index.html"></img>
-      <h1>Muuta asiaan liittyvää</h1>
+      <h1>Muuta</h1>
    </header>
  
  <h2>Suosikki lankakauppani:</h2>
@@ -56,7 +56,7 @@
     Ravelryssä on ohjeita myös myynnissä, eli kannattaa suodattaa hakutuloksia tarvittaessa. 
     Itse nettisivut on kyllä aika huonot ja käyttäjätili on muistaakseni pakko tehdä.</p>
  <a href="https://www.ravelry.com/patterns" target="_blank" rel="noopener noreferrer">Ravelryn ohjesivut</a> <br>  
-
+<p></p>
  <a href=index.html>
  <button class="button-52" role="link">Takaisin etusivulle</button></a>
  
