Koodin luettavuus parannettu

--- a/galleria.html
+++ b/galleria.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html> 
-<html> 
+<html lang="fi"> 
  <head>
   <meta charset = "utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,133 +8,130 @@
   <meta name="keywords" content="meerin villasukat, villasukat"> 
  </head> 
 <body> 
+  <header>
+    <img role="link" src="Gallerialoppu/Lopullinenpaska.png" alt="Logo" width="30px"><a href="index.html"></img>
+    <h1>Kuvagalleria</h1>
+  </header>
 
-<header>
-   <img role="link" src="Gallerialoppu/Lopullinenpaska.png" alt="Logo" width="30px"><a href="index.html"></img>
-   <h1>Kuvagalleria</h1>
-</header>
+<p><a href="#Lelut">Hyppää tästä suoraan pehmoleluihin!</a></p>
+<p><a href="#Seka">Hyppää tästä suoraan sekalaisiin!</a></p>
 
- <p><a href="#Lelut">Hyppää tästä suoraan pehmoleluihin!</a></p>
- <p><a href="#Seka">Hyppää tästä suoraan sekalaisiin!</a></p>
+<h2>Villasukat</h2>
 
-
- <h2>Villasukat</h2>
-
-
-   <h3>Mun ensimmäiset villasukat!</h3>
-   <img src="Gallerialoppu/Eka.JPG" alt="Ensimmäiset sukat" width="90%">
-   <p>Mun ensimmäiset koskaan neulomani villasukat. 
+  <h3>Mun ensimmäiset villasukat!</h3>
+    <img src="Gallerialoppu/Eka.JPG" alt="Ensimmäiset sukat" width="90%">
+    <p>Mun ensimmäiset koskaan neulomani villasukat. 
       Näistä en luovu vaikka onkin jo muutamaan otteeseen pitänyt paikata reikiä. 
       Näitä neuloessa huomasin ensimmäisen sukan neulottuani, ettei ole muuten enää tarpeeksi lankaa toiseen. 
       Lankaa säännöstelemällä sain onneksi tehtyä molemmat, siitä syystä toinen sukka on vähän lyhyempi ja pienempi.</p>
-   <a href="https://www.youtube.com/watch?v=QF6vlz6vRMw" target="_blank" rel="noopener noreferrer">Novitan video-ohje</a>
+     <a href="https://www.youtube.com/watch?v=QF6vlz6vRMw" target="_blank" rel="noopener noreferrer">Novitan video-ohje</a>
 
-   <h3>Cox Socks</h3>
-   <img src="Gallerialoppu/sukka.jpg" alt="Cox Socks" width="90%">
-   <p>Uskomattoman tyylikkäät ja herkät villasukat.
+  <h3>Cox Socks</h3>
+    <img src="Gallerialoppu/sukka.jpg" alt="Cox Socks" width="90%">
+    <p>Uskomattoman tyylikkäät ja herkät villasukat.
       Tein nämä hieman ohjetta ohuemmalla langalla, joten jouduin modifioimaan sukkia. 
       Älä ihmettele, jos omistasi tulee eri näköiset kun näistä.</p>
-   <a href="https://www.ravelry.com/patterns/library/cox-sox" target="_blank" rel="noopener noreferrer">Cox Socksien ohje</a> <br>
+    <a href="https://www.ravelry.com/patterns/library/cox-sox" target="_blank" rel="noopener noreferrer">Cox Socksien ohje</a> <br>
 
-   <h3>Eripari samapari raitasukat</h3>
-   <img src="Gallerialoppu/Raita.JPG" alt="eripari samapari sukat" width="90%">
-   <p>Näihin ei ole ohjetta, freestyletin nämä ja en kirjoittanut ylös mitään. 
+  <h3>Eripari samapari raitasukat</h3>
+    <img src="Gallerialoppu/Raita.JPG" alt="eripari samapari sukat" width="90%">
+    <p>Näihin ei ole ohjetta, freestyletin nämä ja en kirjoittanut ylös mitään. 
       On kuitenkin helpot sukat tehdä itse perässä. 
       Tekee päävärillä resorin ja kantapään ja sukan varressa ja jalassa vuorottelee värejä aina kahden silmukan jaksoissa.</p>
 
-   <h3>Kaiku-sukat</h3>   
-   <img src="Gallerialoppu/Kaiku.JPG" alt="Kaikusukat" width="90%">
-   <p>Jämälangoista vääntämäni kaiku-sukat. 
+  <h3>Kaiku-sukat</h3>   
+    <img src="Gallerialoppu/Kaiku.JPG" alt="Kaikusukat" width="90%">
+    <p>Jämälangoista vääntämäni kaiku-sukat. 
       Rumat kuin synti. Sukkaperheen epäonnistunut esikoinen, joka riehuu Steissillä öisin ja on häpeäksi. 
       Jos teet nämä perässä niin tee itsellesi palvelus ja jätä toi varvassysteemi tekemättä.</p>
-   <a href="https://www.lankava.fi/fi/ohje-neulotut-kaiku-sukat/" target="_blank" rel="noopener noreferrer">Kaiku-sukkien ohje</a>   
+    <a href="https://www.lankava.fi/fi/ohje-neulotut-kaiku-sukat/" target="_blank" rel="noopener noreferrer">Kaiku-sukkien ohje</a>   
 
-   <h3>Salmiakkiruutu sukat</h3>
-   <img src="Gallerialoppu/Salmiakki.JPG" alt="Salmiakkiruutu sukat" width="90%">
-   <p>Salmiakkiruutu kohoneuletta, hyvä perusmalli suosittelen. Kuvassa kohoneule erottuu huonommin, kuin luonnossa.</p>
-   <a href="https://www.novitaknits.com/fi/kohoneule-villasukat-novita-7-veljesta#attributesetPatterndetails" target="_blank" rel="noopener noreferrer">Salmiakkiruutu sukkien ohje</a>
+  <h3>Salmiakkiruutu sukat</h3>
+    <img src="Gallerialoppu/Salmiakki.JPG" alt="Salmiakkiruutu sukat" width="90%">
+    <p>Salmiakkiruutu kohoneuletta, hyvä perusmalli suosittelen. Kuvassa kohoneule erottuu huonommin, kuin luonnossa.</p>
+    <a href="https://www.novitaknits.com/fi/kohoneule-villasukat-novita-7-veljesta#attributesetPatterndetails" target="_blank" rel="noopener noreferrer">Salmiakkiruutu sukkien ohje</a>
 
-   <h3>Sukan näköiset sukat</h3>
-   <img src="Gallerialoppu/Juu.JPG" alt="tommonen joku sukka" width="90%">
-   <p>Tommoset sukat joissa vuorottelin kaks riviä värikästä lankaa ja yhden rivin tummaa. 
-   Värikkäillä riveillä sitten nostelin neulomatta jonkun ehkäpä viiden silmukan välein yhden tumman silmukan ja tollaset sukat siitä tuli.</p>
+  <h3>Sukan näköiset sukat</h3>
+    <img src="Gallerialoppu/Juu.JPG" alt="tommonen joku sukka" width="90%">
+    <p>Tommoset sukat joissa vuorottelin kaks riviä värikästä lankaa ja yhden rivin tummaa. 
+    Värikkäillä riveillä sitten nostelin neulomatta jonkun ehkäpä viiden silmukan välein yhden tumman silmukan ja tollaset sukat siitä tuli.</p>
 
-   <h3>Kukka&sukka</h3>
-   <img src="Gallerialoppu/Kukka.JPG" alt="kukka&sukka" width="90%">
-   <p>Perus nilkkasukat itsestäänraidoittuvasta langasta, johon lopuksi virkkasin ja kiinnitin kukkia. Ihan saatanan epäkäytännölliset, mutta on ainakin komeet.</p>
+  <h3>Kukka&sukka</h3>
+    <img src="Gallerialoppu/Kukka.JPG" alt="kukka&sukka" width="90%">
+    <p>Perus nilkkasukat itsestäänraidoittuvasta langasta, johon lopuksi virkkasin ja kiinnitin kukkia. Ihan saatanan epäkäytännölliset, mutta on ainakin komeet.</p>
 
-   <h3>Perus villasukat</h3>
-   <img src="Gallerialoppu/Basic.JPG" alt="Perussukat" width="90%">
-   <p>Villasukkien basic bitch. Ei mitään erikoista kikkailua, ainoastaan räikeä lanka.</p>
+  <h3>Perus villasukat</h3>
+    <img src="Gallerialoppu/Basic.JPG" alt="Perussukat" width="90%">
+    <p>Villasukkien basic bitch. Ei mitään erikoista kikkailua, ainoastaan räikeä lanka.</p>
 
-   <h3>Vaahtokarkkisukat</h3>
-   <img src="Gallerialoppu/Vaahtokarkki.JPG" alt="Palmikkosukat" width="90%">
-   <p>Maailman nopeimmat ja kivat sukat tehdä. Ihankun laittaisi jalat hattaraan ton megapaksun langan takia.</p>
-   <a href="https://www.novitaknits.com/fi/villasukat-vaahtokarkki-novita-isoveli#attributesetPatterndetails" target="_blank" rel="noopener noreferrer">Ohje Vaahtokarkkisukkiin</a>
+  <h3>Vaahtokarkkisukat</h3>
+    <img src="Gallerialoppu/Vaahtokarkki.JPG" alt="Palmikkosukat" width="90%">
+    <p>Maailman nopeimmat ja kivat sukat tehdä. Ihankun laittaisi jalat hattaraan ton megapaksun langan takia.</p>
+    <a href="https://www.novitaknits.com/fi/villasukat-vaahtokarkki-novita-isoveli#attributesetPatterndetails" target="_blank" rel="noopener noreferrer">Ohje Vaahtokarkkisukkiin</a>
 
-   <h3>Pupusukat</h3>
-   <img src="Gallerialoppu/Kani.JPG" alt="Pupusukat" width="90%">
-   <p>Oletko joskus laittanut villasukat jalkaan ja miettinyt, että näissä on kyllä aivan liian vähän korvia? 
+  <h3>Pupusukat</h3>
+    <img src="Gallerialoppu/Kani.JPG" alt="Pupusukat" width="90%">
+    <p>Oletko joskus laittanut villasukat jalkaan ja miettinyt, että näissä on kyllä aivan liian vähän korvia? 
       En minäkään, mutta siinä ne nyt on!</p>
-   <a href="https://www.novitaknits.com/fi/neulotut-pitkavartiset-villasukat-novita-7-veljesta#attributesetPatterndetails" target="_blank" rel="noopener noreferrer">Ohjeet itse sukkiin</a> <br>  
-   <a href="https://www.meillakotona.fi/artikkelit/ovatko-nama-sopoimmat-sukat-ikina-neulo-pupusukat-itselle-tai-lapselle" target="_blank" rel="noopener noreferrer">Ohje kanin korviin</a>
+    <a href="https://www.novitaknits.com/fi/neulotut-pitkavartiset-villasukat-novita-7-veljesta#attributesetPatterndetails" target="_blank" rel="noopener noreferrer">Ohjeet itse sukkiin</a> <br>  
+    <a href="https://www.meillakotona.fi/artikkelit/ovatko-nama-sopoimmat-sukat-ikina-neulo-pupusukat-itselle-tai-lapselle" target="_blank" rel="noopener noreferrer">Ohje kanin korviin</a>
 
-   <h3>Socks fit for a queen</h3>
-   <img src="Gallerialoppu/Tansu.jpg" alt="Liilat sukat" width="80%">
-   <p>Ystävälle lahjaksi tehdyt sukat. Värit valitsin hänen luonteensa mukaan. Nirkkoreuna ja broken seed stitch kuvio.</p>
+  <h3>Socks fit for a queen</h3>
+    <img src="Gallerialoppu/Tansu.jpg" alt="Liilat sukat" width="80%">
+    <p>Ystävälle lahjaksi tehdyt sukat. Värit valitsin hänen luonteensa mukaan. Nirkkoreuna ja broken seed stitch kuvio.</p>
 
-   <h3>Destiny: Hunter</h3>
-   <img src="Gallerialoppu/Hunter.JPG" alt="Hunter sukat" width="90%">
-   <p>Destiny pelisarjan fanille Hunter logolla sukat. Näihin tein vain perus miesten villasukat ja vartea varten googletin logon ruutupiirroksena.</p>
+  <h3>Destiny: Hunter</h3>
+    <img src="Gallerialoppu/Hunter.JPG" alt="Hunter sukat" width="90%">
+    <p>Destiny pelisarjan fanille Hunter logolla sukat. Näihin tein vain perus miesten villasukat ja vartea varten googletin logon ruutupiirroksena.</p>
 
-   <h3>Körtti sukat</h3>
-   <img src="Gallerialoppu/Körtti.JPG" alt="Körttisukat" width="90%">
-   <p>Miesten körttisukat, tosi hauska, helppo ja rento malli neuloa.</p>
-   <a href="https://www.lankava.fi/fi/ohje-neulotut-kortti-villasukat/" target="_blank" rel="noopener noreferrer">ohje Körtti-villasukilla</a>
+  <h3>Körtti sukat</h3>
+    <img src="Gallerialoppu/Körtti.JPG" alt="Körttisukat" width="90%">
+    <p>Miesten körttisukat, tosi hauska, helppo ja rento malli neuloa.</p>
+    <a href="https://www.lankava.fi/fi/ohje-neulotut-kortti-villasukat/" target="_blank" rel="noopener noreferrer">ohje Körtti-villasukilla</a>
 
-   <h3>Muumipeikko</h3>
-   <img src="Gallerialoppu/Muumi.JPG" alt="Muumisukat" width="90%">
-   <p>Maailman söpöimmät ja raivostuttavimmat villasukat. 
+  <h3>Muumipeikko</h3>
+    <img src="Gallerialoppu/Muumi.JPG" alt="Muumisukat" width="90%">
+    <p>Maailman söpöimmät ja raivostuttavimmat villasukat. 
       Nämä piti aloittaa alusta varmaan kolmesti. 
       Näistä oli ohjeessa myös tarjolla vain lasten ja naisten koko. 
       Ihan hirveä homma vääntää näistä miehelle sopivan kokoiset.<br> 
       Ohje: Moomin X Novita-lehti Muumimamman lämpöiset asusteet (8,90€)</p>
 
- <h2 id="Lelut">Pehmolelut</h2>
+<h2 id="Lelut">Pehmolelut</h2>
 
-   <h3>Järkyttävän surkea käärme? tai mato??</h3>
-<img src="Gallerialoppu/Mato.JPG" alt="Käärme" width="90%">
-<p>Aloitetaan taas parhaimmasta. 
-   Jonkunlainen käärme, jonka olen vääntänyt pieni ikuisuus sitten. No toughts, just vibes.</p>   
+  <h3>Järkyttävän surkea käärme? tai mato??</h3>
+    <img src="Gallerialoppu/Mato.JPG" alt="Käärme" width="90%">
+    <p>Aloitetaan taas parhaimmasta. 
+    Jonkunlainen käärme, jonka olen vääntänyt pieni ikuisuus sitten. No toughts, just vibes.</p>   
 
-   <h3>Jalaton lintu</h3>
-<img src="Gallerialoppu/Lintu.JPG" alt="Hienosto lintu, baskeri ja kaikki" width="90%">
-<p>Todennäköisesti Ranskalainen lintu, koska hänellä on baskeri. Fancy. <br> Ohjeet: Arne & Carlos - Neulotut linnut-kirja</p>
+  <h3>Jalaton lintu</h3>
+    <img src="Gallerialoppu/Lintu.JPG" alt="Hienosto lintu, baskeri ja kaikki" width="90%">
+    <p>Todennäköisesti Ranskalainen lintu, koska hänellä on baskeri. Fancy. <br> Ohjeet: Arne & Carlos - Neulotut linnut-kirja</p>
 
-<h3>Hirviö</h3>
-<img src="Gallerialoppu/Hirvio.JPG" alt="Hirviö" width="90%">
-<p>Symppis hirviö, mitä kerran tein kaverin kanssa meidän mummoklubissa. 
-   Ekologiset arvot ovat tälle hirviötyypille tärkeitä ja siksi hänet on tehty jämälangoista.</p>
-<a href="https://www.novitaknits.com/fi/lapsen-pikkuhirvio-lelu-novita-nalle-taika#attributesetPatterndetails" target="_blank" rel="noopener noreferrer">Ohje hirivöön</a>
+  <h3>Hirviö</h3>
+    <img src="Gallerialoppu/Hirvio.JPG" alt="Hirviö" width="90%">
+    <p>Symppis hirviö, mitä kerran tein kaverin kanssa meidän mummoklubissa. 
+    Ekologiset arvot ovat tälle hirviötyypille tärkeitä ja siksi hänet on tehty jämälangoista.</p>
+    <a href="https://www.novitaknits.com/fi/lapsen-pikkuhirvio-lelu-novita-nalle-taika#attributesetPatterndetails" target="_blank" rel="noopener noreferrer">Ohje hirivöön</a>
 
-<h3>Totuudelle (ja kaikelle) sokea jänis</h3>
-<img src="Gallerialoppu/Pupu.JPG" alt="simätön jänis" width="90%">
-<p>Silmätön pupu katselee haikeana taivaalle, koska ei voi koskaan nähdä tähtiä.</p>
+  <h3>Totuudelle (ja kaikelle) sokea jänis</h3>
+    <img src="Gallerialoppu/Pupu.JPG" alt="simätön jänis" width="90%">
+    <p>Silmätön pupu katselee haikeana taivaalle, koska ei voi koskaan nähdä tähtiä.</p>
 
-<h3>Pois muuttaneet käärmeet</h3>
-<img src="Gallerialoppu/Kaarme.jpg" alt="Muutama käärme" width="80%">
-<p>Kaverille lahjaksi tehdyt käärmeet. Ensin hän sai liilan kärmeen, mutta näki myöhemmin tekemäni pörhökäärmeen ja tilasi itselleen myös sellaisen.</p>
+  <h3>Pois muuttaneet käärmeet</h3>
+    <img src="Gallerialoppu/Kaarme.jpg" alt="Muutama käärme" width="80%">
+    <p>Kaverille lahjaksi tehdyt käärmeet. Ensin hän sai liilan kärmeen, mutta näki myöhemmin tekemäni pörhökäärmeen ja tilasi itselleen myös sellaisen.</p>
 
-<h3>Pois muuttaneet sokea jänis ja og pörhökäärme</h3>
-<img src="Gallerialoppu/Kaarmepupu.jpg" alt="Käärme ja pupu" width="80%">
-<p>Kaverille lahjaksi annetut alkuperäinen pörhökäärme ja minimaalinen sokea jänis. 
-   Tämä on siis se käärmeiden valioyksilö, jonka pohjalta piti neuloa toinenkin.</p>
+  <h3>Pois muuttaneet sokea jänis ja og pörhökäärme</h3>
+    <img src="Gallerialoppu/Kaarmepupu.jpg" alt="Käärme ja pupu" width="80%">
+    <p>Kaverille lahjaksi annetut alkuperäinen pörhökäärme ja minimaalinen sokea jänis. 
+    Tämä on siis se käärmeiden valioyksilö, jonka pohjalta piti neuloa toinenkin.</p>
 
-<h3>Hullu Haamu</h3>
-<img src="Gallerialoppu/Haamu.JPG" alt="Hullut päivät haamu" width="90%">
-<p>Mitä mitä, tunnettu maskottihaamu jo kahdessa Haaga-Helian projektissa mukana??? Tietäjät tietää ja ovat nähneet haamun Ammatillisen viestinnän kurssilla, osana työnhaku videotani.</p>
+  <h3>Hullu Haamu</h3>
+    <img src="Gallerialoppu/Haamu.JPG" alt="Hullut päivät haamu" width="90%">
+    <p>Mitä mitä, tunnettu maskottihaamu jo kahdessa Haaga-Helian projektissa mukana??? Tietäjät tietää ja ovat nähneet haamun Ammatillisen viestinnän kurssilla, osana työnhaku videotani.</p>
 
- <h2 id="Seka">Sekalaiset</h2>
+<h2 id="Seka">Sekalaiset</h2>
 
 
  <p> Tähän <br> massiivinen <br> määrä <br> kuvia<br> kuvateksteineen <br></p>
