--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html> 
-<html> 
- <head>
+<html lang="fi"> 
+<head>
   <meta charset = "utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
@@ -8,19 +8,22 @@
   <meta name="keywords" content="meerin villasukat, villasukat"> 
   <style>
     a:link {color: #ede7d9;}
+    a:link {font-size: 17px;}
     a:hover {color: #93032e;}
+    a:visited {color: #ede7d9;}
   </style>
 </head> 
 
 <body> 
- <nav class ="navigation">  
-<img src="Gallerialoppu/IsoLogo.png" alt="Paska logo" width="25%"> 
+  <nav class ="navigation">  
+    <img src="Gallerialoppu/IsoLogo.png" alt="Paska logo" width="25%"> 
    
- <a href="galleria.html">Kuvagalleria</a>
- <a href="historia.html">Historia</a>
- <a href="ohjeet.html">Ohjeet</a>
- <a href="muuta kivaa.html">Muuta</a>
-</nav>
+    <a href="galleria.html">Kuvagalleria</a>
+    <a href="historia.html">Historia</a>
+    <a href="ohjeet.html">Ohjeet</a>
+    <a href="muuta kivaa.html">Muuta</a>
+  </nav>
+
  <h1>Tervetuloa</h1> 
  <p>Tule nauttimaan tai vaihtoehtoisesti kärsimään mun villasukista, jos olet täällä vasten tahtoasi. <em>Sori siitä...</em></p> 
 
