--- a/ohjeet.html
+++ b/ohjeet.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fi"
+<html lang="fi">
  <head>
     <meta charset = "utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,33 +13,33 @@
      <h1>Ohjeet</h1>
 </header>
     
-    <h2>&lt;!DOCTYPE socks&gt;</h2>
+  <h2>&lt;!DOCTYPE socks&gt;</h2>
 
     <table>
-    <tr>
-    <th>Tarvike</th>
-    <th>Määrä</th>    
-    </tr>
-    <tr>
-        <th>3,5mm sukkapuikot</th>
-        <th>1</th>
-    </tr>
-    <tr>
-        <th>4mm sukkapuikot</th>
-        <th>1</th>
-    </tr>
-    <tr>
-        <th>7 veljestä lankaa taustavärillä</th>
-        <th>x grammaa</th>
-    </tr>
-    <tr>
-        <th>7 veljestä lankaa tehostevärillä</th>
-        <th>x grammaa</th>
-    </tr>
-    <tr>
-        <th>Hyvää teetä</th>
-        <th>4 kuppia</th>
-    </tr>
+     <tr>
+       <th>Tarvike</th>
+       <th>Määrä</th>    
+     </tr>
+     <tr>
+       <th>3,5mm sukkapuikot</th>
+       <th>1</th>
+     </tr>
+     <tr>
+       <th>4mm sukkapuikot</th>
+       <th>1</th>
+     </tr>
+     <tr>
+       <th>7 veljestä lankaa taustavärillä</th>
+       <th>x grammaa</th>
+     </tr>
+     <tr>
+       <th>7 veljestä lankaa tehostevärillä</th>
+       <th>x grammaa</th>
+     </tr>
+     <tr>
+       <th>Hyvää teetä</th>
+       <th>4 kuppia</th>
+     </tr>
     </table>
 
     <p>Tästä ohjeesta tulee koon 37 tai 38 sukat käsialastasi riippuen.
@@ -47,14 +47,14 @@
        juoksuista, sillä se on saman paksuista kuin ohjeen suosittelema lanka. 
     </p>
 
-    <p>Resori:<br>
+    <p> <strong>Resori:</strong> <br>
         Aloita luomalla 48s. Jaa silmukat pienemmille 3,5mm puikoille 
         niin, että jokaisella puikolla on 12s. Neulo 2x2 resoria, eli 
         2 silmukkaa oikein ja sitten kaksi silmukkaa nurin ja niin edelleen. 
         Kun resoria on 12 kerrosta tai 3,5cm se on valmis. 
     </p>
 
-    <p>Varsi:<br>
+    <p> <strong>Varsi:</strong> <br>
         Vaihda käyttöön isommat 4mm puikot ja neulo kaksi kerrosta kaikki silmukat oikein.
         Aloita sitten neulomaan kaavion mukaan. Huomaa, että kaaviota luetaan 
         alhaalta ylös sekä oikealta vasemmalle. Neulo vaaleat ruudut 
@@ -62,8 +62,29 @@
         Tehosteväri tulee ottaa ”takaa”, että se tulee parhaiten neuloksessa 
         esille. Kiinnitä myös pitkät langanjuoksut, ettei neulokseen jää ikäviä 
         lankasilmukoita. Nyt kannattaa käyttää kerroslaskuria tai peittää tehdyt 
-        rivit, että pysyy parhaiten mukana. 
-    </p>    
+        rivit, että pysyy parhaiten mukana. Kun olet neulonut ruutupiirroksen loppuun, 
+        leikkaa tehostelanka. Tästä eteenpäin käytetään ainoastaan taustaväriä. Neulo vielä 
+        kaksi riviä pelkällä taustavärillä ja aloita kantapää.
+    </p>
+
+    <p> <strong>Kantalappu:</strong> <br> 
+        Nyt tehdään tavallinen vahvistettu kantapää. Neulo viimeiselle puikolle ensimmäisen 
+        puikon silmukat (yht. 24s). Nurjalla puolella nosta ensimmäinen silmukka neulomatta 
+        ja neulo loput silmukat nurin. Oikealla puolella nosta joka toinen silmukka neulomatta 
+        ja neulo joka toinen normaalisti. Neulo näin 25 kerrosta, viimeisenä nurja kerros.
+    </p>
+
+    <p> <strong>Kantalapun kavennukset:</strong> <br> 
+        Jatka vahvennettua neulosta kuten aikaisemmin. Jaa nyt silmukat kolmelle puikolle. 
+        Neulo ensimmäiselle puikolle 8 silmukkaa ja seuraavalle puikolle 7. Viimeiselle puikolle 
+        jää yhdeksän silmukkaa. Neulo vielä viimeiseltä puikolta yksi silmukka ja nosta edellinen 
+        neulomatta nostettu silmukka sen yli, eli tee ylivetokavennus.<br><br>
+        Käännä työ ympäri ja neulo nurjalta puolelta. Nosta yksi neulomatta ja neulo normaalisti 
+        nurjaa keskimmäisen puikon silmukoita, kunnes pääset puikon viimeiseen silmukkaan. Siirrä 
+        viereiseltä puikolta keskipuikolle silmukka ja neulo nämä kaksi silmukkaa nurin yhteen.<br><br> 
+        Käännä taas työ ja neulo oikealta puolelta. Toista kahta vaihetta, kunnes kaikki ensimmäisen 
+        ja kolmannen puikon silmukat on kavennettu pois. 
+    </p>
 
 
     <a href=index.html>
