--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
   <title>Meerin Villasukat</title> 
   <meta name="keywords" content="meerin villasukat, villasukat"> 
   <style>
-    a:link {color: #ede7d9;}
+    a:link {color: #ede7d9;
+    font-family: 'Courier New', Courier, monospace;}
     a:link {font-size: 17px;}
     a:hover {color: #93032e;}
     a:visited {color: #ede7d9;}
+    
   </style>
 </head> 
 
