--- a/galleria.html
+++ b/galleria.html
@@ -6,6 +6,11 @@
   <link rel="stylesheet" href="style.css">
   <title>Meerin Villasukat - Kuvagalleria</title> 
   <meta name="keywords" content="meerin villasukat, villasukat"> 
+
+  <link rel="preconnect" href="https://fonts.googleapis.com"> 
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+  <link href="https://fonts.googleapis.com/css2?family=Gruppo&display=swap" rel="stylesheet">
+  
  </head> 
 <body> 
   <header>
@@ -138,5 +143,6 @@
 
  <a href=index.html>
    <button class="button-52" role="link">Takaisin etusivulle</button></a>
+
 </body> 
 </html>
