--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     a:link {font-size: 17px;}
     a:hover {color: #93032e;}
     a:visited {color: #ede7d9;}
-    
   </style>
 </head> 
 
@@ -29,12 +28,10 @@
  <h1>Tervetuloa</h1> 
  <p>Tule nauttimaan tai vaihtoehtoisesti kärsimään mun villasukista, jos olet täällä vasten tahtoasi. <em>Sori siitä...</em></p> 
 
- <p>Nyt kun olet tänne eksynyt syystä tai toisesta, niin katso ihmeessä ympärillesi. 
-    Tämän sivuston sydän on ehdottomasti kuvagalleria. 
-    Sieltä pääset katselemaan mun tekemiä töitä.
-    Ohje sivulta pääset itsekin neulomaan. 
-    Historiasta voit lueskella mun lärpätyksiä. 
-    Muuta sivustolta pääset tsekkaamaan jotain mun suosikki liikkeitä ja nettisivuja. </p>
+ <p>Nyt kun olet tänne eksynyt syystä tai toisesta, niin katso ihmeessä ympärillesi. Tämän sivuston sydän on ehdottomasti 
+    kuvagalleria. Sieltä pääset katselemaan mun tekemiä töitä. Ohje sivulta pääset itsekin neulomaan. Historiasta voit 
+    lueskella mun lärpätyksiä. Ei oo liian pitkä teksti. Tai ehkä vähän, muttei ihan kauheesti liian pitkä. Muuta sivustolta 
+    pääset tsekkaamaan jotain mun suosikki liikkeitä ja nettisivuja. </p>
 
 </body> 
 </html>
