eri fonttikoot eri ruuduille

--- a/muuta kivaa.html
+++ b/muuta kivaa.html
@@ -14,10 +14,10 @@
 <body> 
 <header>
     <img role="link" src="Gallerialoppu/Lopullinenpaska.png" alt="Logo" width="30px"><a href="index.html"></img>
-    <h1>Muuta kivaa</h1>
+    <h1 style="margin-bottom: 0px;">Muuta kivaa</h1>
 </header>
  
-<h2>Suosikki lankakauppani:</h2>
+<h2 style="margin-top: 0px;">Suosikki lankakauppani:</h2>
     <h3>Menita</h3>
       <p>Menita on sympaattinen pikku lankakauppa, josta olen ensimmäiset lankakeräni aikoinani ostanut. 
       Tykkäsin erityisesti Helsingin Punavuoressa sijaitsevasta liikkeestä ja siellä usein kävinkin. 
