--- a/ohjeet.html
+++ b/ohjeet.html
@@ -10,10 +10,10 @@
 <body>
 <header>
      <img role="link" src="Gallerialoppu/Lopullinenpaska.png" alt="Logo" width="30px"><a href="index.html"></img>
-     <h1>Ohjeet</h1>
+     <h1 style="margin-bottom: 0px;">Ohjeet</h1>
 </header>
     
-  <h2>&lt;!DOCTYPE socks&gt;</h2>
+  <h2 style="margin-top: 0px;">&lt;!DOCTYPE socks&gt;</h2>
 
     <table>
      <tr>
@@ -34,7 +34,7 @@
      </tr>
      <tr>
        <th>7 veljestä lankaa tehostevärillä</th>
-       <th>x grammaa</th>
+       <th>25 grammaa</th>
      </tr>
      <tr>
        <th>Hyvää teetä</th>
