--- a/galleria.html
+++ b/galleria.html
@@ -15,7 +15,7 @@
 <body> 
   <header>
     <img role="link" src="Gallerialoppu/Lopullinenpaska.png" alt="Logo" width="30px"><a href="index.html"></img>
-    <h1>Kuvagalleria</h1>
+    <h1 style="margin-bottom: 0px;">Kuvagalleria</h1>
   </header>
 
 <p><a href="#Lelut">Hyppää tästä suoraan pehmoleluihin!</a></p>
