--- a/historia.html
+++ b/historia.html
@@ -14,7 +14,7 @@
     <h1 style="margin-bottom: 0px;">Kuinka kaikki alkoi?</h1>
 </header>
 
-<p><em>”Nyt neulot patalapun”, ”Nyt neulot kaulahuivin” ja ”Nyt neulot neulegraffitin”.</em> Vihasin neulomista ala- sekä yläasteella eikä ihmekään. 
+<p style="margin-top: 0px;"><em>”Nyt neulot patalapun”, ”Nyt neulot kaulahuivin” ja ”Nyt neulot neulegraffitin”.</em> Vihasin neulomista ala- sekä yläasteella eikä ihmekään. 
     Jokainen kerta, kun määrättiin neulomaan, työnä oli poikkeuksetta aivan pirun tylsä suoran läpyskän neulominen. Etenkin sen kaulahuivin 
     neulomiseen meni ikuisuus ja se oli sitä yhtä ja samaa silmukka silmukalta. </p>
 
